# opengl-blockshooter-game

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: bossFragmentShader.frag  bossVertexShader.vert  spriteFragShader.frag
src/: audioPlayer.h  block.cpp  block.h  blockObject.cpp  blockObject.h  character.cpp  character.h  enemy.cpp  enemy.h  enemy1.cpp  enemy1.h  enemy2.cpp  enemy2.h  enemy3.cpp  enemy3.h  enemy3_mask.cpp  enemy3_mask.h  game.cpp  game.h  gameObject.cpp  gameObject.h  glad.c  healthBlock.cpp  healthBlock.h  hud.cpp  hud.h  level.cpp  level.h  main.cpp  monkeyBoss.cpp  monkeyBoss.h  player.cpp  player.h  playerObject.cpp  playerObject.h  resource_manager.cpp  spriteRenderer.h  starBlock.cpp  starBlock.h  trailGenerator.cpp  (+1 more)
src/backend/miniaudio/: soloud_miniaudio.cpp
src/core/: soloud.cpp
